georegistry-web/src/main/ng2/src/app/registry/component/geoobject-shared-attribute-editor/geoobject-shared-attribute-editor.css
/* form.modal-form {
    overflow: auto;
    height: 100vh;
} */

.modal-form .text input[type="text"] {
    background: #f5f5f5;
}

.modal-form .text input[type="text"]:disabled {
    background: #eee;
}

.full-width-radio-button {
	  position: relative;
}

.full-width-radio-button .errorSpan, .changeSpan {
	position: absolute;
}

.full-width-radio-button .errorSpan {
  left: 2.5px;
}

.full-width-radio-button .changeSpan {
  right: 2.5px;
}

.full-width-radio-button .tabHasErrors:before {
  content: ' \25CF';
  font-size: 20px;
  line-height:12px;
  text-align: left;
  color: red;
}

.full-width-radio-button .tabHasChanges:after {
	content: ' \25CF';
  font-size: 20px;
  line-height:12px;
  text-align: right;
  color: orange;
}

li.list-group-item {
    font-size: 18px;
}

.warning-text{
    color: orange;
}


form.modal-form {
    overflow: visible;
}

fieldset {
    width: 100% !important;
}


.panel {
/* 	margin: 0; */
}

.panel .list-group {
	margin: 0;
}

.panel .list-group-item {
	padding: 5px 0;
}

.panel-heading h5 {
	margin:0;
}

.input-group {
	width: 100%;
}

.radio-group {
	border: solid 1px #ccc;
	border-radius: 5px 0 0 5px;
	line-height: 40px;
}

/* Adding ::ng-deep to text inputs for child date-field formatting */
::ng-deep .input-group input[type="text"],
.input-group input[type="number"],
.input-group input[type="date"],
.input-group select {
	border-radius: 5px 0 0 5px;
	width: 100%;
}
.input-group input[type="text"].input-group-read-only,
.input-group input[type="number"].input-group-read-only,
.input-group input[type="date"].input-group-read-only,
.input-group select.input-group-read-only,
.input-group .radio-group.input-group-read-only {
	border-radius: 5px; 
}

.geoobject-panel-header{
	height: 50px;
    width: 100%;
    background: grey;
}

